tests/spec/compile-pass/046_layout_attributes.zn
// category: compile-pass
// stage: mvp
// milestone: M5
// profile: freestanding
// purpose: layout attributes support Auto, Source, C, Packed, and zero-cost single-field wrappers

module tests.pass.layoutAttributes;

struct AutoEntry {
    flag: Bool,
    id: U64,
    kind: U8,
}

@layout(Source)
struct SourceEntry {
    hotA: U64,
    hotB: U64,
    coldFlag: Bool,
}

@layout(C)
pub struct CPoint {
    pub x: F32,
    pub y: F32,
}

@layout(Packed(1))
struct Header {
    tag: U8,
    length: U16,
}

struct FileDescriptor {
    value: I32,
}

fn inspect(value: U16) -> U16 {
    return value;
}

fn main() -> I32 {
    val auto = AutoEntry { flag: true, id: 9, kind: 1 };
    val source = SourceEntry { hotA: 1, hotB: 2, coldFlag: false };
    val point = CPoint { x: 1.0, y: 2.0 };
    var header = Header { tag: 4, length: 20 };
    val fd = FileDescriptor { value: 3 };

    val length = inspect(header.length);
    header.length = 24;

    val ignoredAuto = auto.id;
    val ignoredSource = source.hotA + source.hotB;
    val ignoredPoint = point.x;
    val ignoredLength = length;
    val ignoredHeader = header.tag;

    return fd.value;
}
